# Remote-sensing-of-the-Earth-Search-for-ships-in-satellite-images

./: Passport.docx  README.md  Research.doc
Backend/: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  swagger.json
Backend/Core/: .pre-commit-config.yaml  README.md  docker-compose.yaml  swagger.json
Backend/Core/app/configuration/: __init__.py  server.py
Backend/Core/app/internal/repository/: __init__.py
Backend/Core/app/internal/routes/: __init__.py  auth.py  prompt.py
Backend/Core/app/internal/services/: prompt.py
Backend/Core/app/pkg/models/: __init__.py
Backend/Core/docker/rabbit_init/: Dockerfile
Backend/Core/migrations/: 20250309_01_fkLwo-create-user-table.py  20250413_01_ZhviF-create-prompts-index-id-created-at.py
Backend/Core/migrations_minio/: create-main-pc-for-user-prompts-raw16712b97.json  create-main-pc-for-user-prompts-results-3f8aedbf.json  create-ml_model-bucket-61748953.json  create-requester-user-23901c10.json
Backend/Core/scripts/: init_rabbit.py  migrate.py  migrate_minio.py
Backend/ML_Service/: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
Backend/ML_Service/app/configuration/: settings.py
Backend/ML_Service/app/internal/: __init__.py  init_model.py  run.py
Backend/ML_Service/app/internal/services/: __init__.py  image_processor.py
Backend/ML_Service/app/internal/workers/: task_processor.py
Backend/ML_Service/app/pkg/clients/: __init__.py
Backend/ML_Service/app/pkg/connectors/: __init__.py
Backend/ML_Service/app/pkg/models/: __init__.py
Backend/ML_Service/app/pkg/settings/: settings.py
Backend/ML_Service/docker/worker/: Dockerfile
Backend/Prompt_Updater/: .pre-commit-config.yaml  pyproject.toml  swagger.json
Backend/Prompt_Updater/app/configuration/: __init__.py  events.py
Backend/Prompt_Updater/app/internal/repository/: __init__.py
Backend/Prompt_Updater/app/internal/routes/: __init__.py  prompt.py
Backend/Prompt_Updater/app/internal/services/: __init__.py  prompt.py
Backend/Prompt_Updater/app/pkg/clients/: __init__.py
Backend/Prompt_Updater/app/pkg/connectors/: __init__.py
Backend/Prompt_Updater/app/pkg/models/: __init__.py
Backend/Prompt_Updater/app/pkg/settings/: settings.py
Backend/app/: __init__.py
Backend/app/configuration/: __init__.py  events.py  server.py
Backend/app/internal/pkg/handlers/: register_errors.py
Backend/app/internal/pkg/middlewares/: handle_http_exceptions.py  (+1 more)
Backend/app/internal/repository/: __init__.py
Backend/app/internal/routes/: __init__.py  auth.py  city.py  prompt.py  user.py
Backend/app/internal/services/: __init__.py  auth.py  prompt.py  user.py
Backend/app/internal/workers/: background.py
Backend/app/pkg/clients/: __init__.py
Backend/app/pkg/connectors/: __init__.py  connector.py
Backend/app/pkg/logger/: logger.py
Backend/app/pkg/models/: __init__.py
Backend/app/pkg/settings/: settings.py
Backend/app/pkg/utils/: confirmation_code.py  password.py
Backend/docker/api/: Dockerfile
Backend/docker/consumer/: Dockerfile
Backend/docker/migrations/: Dockerfile
Backend/docker/migrations_minio/: Dockerfile
Backend/docker/postgresql/: Dockerfile
Backend/docker/redis/: Dockerfile
Backend/migrations/: 20231112_05_knHgl-cities.py  20250309_01_fkLwo-create-user-table.py  20250309_02_y8tG9-create-user-roles.py  20250330_01_ZPZxR-create-refresh-token-table.py  20250407_01_qUgKe-create-prompts-table.py
Backend/migrations_minio/: apply-main-pc-for-user-prompts-raw-40528a29.json  apply-main-pc-for-user-prompts-results-112b34cf.json  create-main-pc-for-user-prompts-results-3f8aedbf.json  create-ml-user-41fba64f.json  create-requester-user-23901c10.json  create-user-prompts-raw-bucket-e0c55cf4.json  create-user-prompts-result-bucket-ff6aaf04.json
Backend/scripts/: init.postgres.sh
ML/: EDA.ipynb  (+1 more)
(+144 files in other folders)
