[tool.poetry]
name = "Ships"
version = "2.1.0"
authors = ["alg3bra@mail.ru"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^2.10.2"}
dependency-injector = "^4.43.0"
yoyo-migrations = "^8.1.0"
aiopg = "^1.3.0"
bcrypt = "^4.0.1"
setuptools = ">=68.0.0"

pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
MarkupSafe = "^2.1.0"

[tool.poetry.group.formatters.dependencies]
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.1.0"
docformatter = "^1.4"
add-trailing-comma = "^2.2.1"

[tool.poetry.group.sasts.dependencies]
itsdangerous = "^2.1.2"
safety = "^2.3.3"
bandit = "^1.7.1"

[tool.poetry.group.linters.dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
pylint = "^2.17.6"
ruff = "^0.1.8"
pylint-pytest = "^1.1.7"

[tool.poetry.group.tests.dependencies]
pytest-asyncio = "^0.20.2"
coverage = "^6.3.2"
pytest-cov = "^4.0.0"
pytest-repeat = "^0.9.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
sphinx-pydantic = "^0.1.1"
sphinx-rtd-theme = "^1.1.1"


[tool.poetry.group.benchmarks.dependencies]
locust = "^2.14.2"


[tool.poetry.group.sugar.dependencies]
pytest-sugar = "^0.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
